[gd_scene load_steps=6 format=2]

[ext_resource path="res://levels/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://fonts/LargeFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://levels/MenuIcon.tscn" type="PackedScene" id=3]
[ext_resource path="res://levels/PauseMenu.shader" type="Shader" id=4]

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = ExtResource( 4 )

[node name="PauseMenu" type="Popup" index="0"]

pause_mode = 2
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = false
script = ExtResource( 1 )
_sections_unfolded = [ "Pause", "Rect", "Visibility" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MoveAboveEverything" type="CanvasLayer" parent="." index="0"]

layer = 4
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="UI" type="Node2D" parent="MoveAboveEverything" index="0"]

__meta__ = {
"_edit_lock_": true
}

[node name="PausedLabel" type="Label" parent="MoveAboveEverything/UI" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 43.0
margin_right = 1270.0
margin_bottom = 74.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = ExtResource( 2 )
text = "Paused!"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "Material", "Rect", "Visibility", "custom_fonts" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MenuIcon" parent="MoveAboveEverything/UI" index="1" instance=ExtResource( 3 )]

position = Vector2( 119.13, 99.2751 )

[node name="MenuIcon2" parent="MoveAboveEverything/UI" index="2" instance=ExtResource( 3 )]

position = Vector2( 203.063, 101.983 )

[node name="MenuIcon3" parent="MoveAboveEverything/UI" index="3" instance=ExtResource( 3 )]

position = Vector2( 280.678, 94.7626 )

[node name="MenuIcon4" parent="MoveAboveEverything/UI" index="4" instance=ExtResource( 3 )]

position = Vector2( 359.195, 96.5676 )

[node name="MoveAboveBGFX" type="CanvasLayer" parent="." index="1"]

layer = 3
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="Darken" type="ColorRect" parent="MoveAboveBGFX" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1270.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 0, 0, 0, 0.870588 )
_sections_unfolded = [ "Rect" ]
__meta__ = {
"_edit_lock_": true
}

[node name="MoveAboveGame" type="CanvasLayer" parent="." index="2"]

layer = 2
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )

[node name="BGFX" type="ColorRect" parent="MoveAboveGame" index="0"]

visible = false
material = SubResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
color = Color( 1, 1, 1, 1 )
_sections_unfolded = [ "Material" ]
__meta__ = {
"_edit_lock_": true
}


